--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -25,10 +25,10 @@ custom_template/release=""
 variant/extensions_support=false
 variant/thread_support=false
 vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=true
+vram_texture_compression/for_mobile=false
 html/export_icon=true
 html/custom_html_shell=""
-html/head_include="here we go"
+html/head_include=""
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
